Fix wrapper allowing decimal pixel where canvas don't, making the overlay not fit in some cases

--- a/src/Room/Canvas/Canvas.css
+++ b/src/Room/Canvas/Canvas.css
@@ -23,4 +23,5 @@ canvas {
     position:relative;
     line-height: 0;
     height: 100%;
+    display: inline-table;
 }
